[package]
authors = ["manuel_puentes"]
edition = "2018"
name = "hc_zome_go"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_go"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
derive_more = "0"
serde = {version = "1.0", features = ["derive"]}

hdk = "0.0.109"
holo_hash = {version = "0.0.8", features = ["encoding"]}

goban = "0.17.0"
nat = "0.0.0"

hc_mixin_turn_based_game = {git = "http://github.com/eyss/turn-based-game", rev = "d9de54b1499ec73283628cd4ff439b42f631f3f2"}
